syntax = "proto3";

package com.sqream.cloud.generated.v1;

option java_multiple_files = true;

enum AuthenticationType {
  AUTHENTICATION_TYPE_UNSPECIFIED = 0;
  AUTHENTICATION_TYPE_INTERNAL = 1;
  AUTHENTICATION_TYPE_IDP = 2;
}
